fixes for foreign kye and multiple additional tests in mongodb